--- a/aboutme.html
+++ b/aboutme.html
@@ -35,22 +35,17 @@
   
  <section class="projects">
         <div class="content-wrap">
-          <h2>Lorem ipsum</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi eleifend magna ac odio condimentum egestas condimentum id libero. Praesent libero est, laoreet vel risus id, ornare volutpat libero. Suspendisse laoreet, leo sit amet sodales congue, dolor velit ultricies mauris, vitae ullamcorper mauris lorem in lorem. Pellentesque porttitor tellus dui, at tincidunt arcu tristique at. In consequat sed velit nec lobortis. In ac imperdiet arcu, ac lobortis leo. Etiam fringilla turpis quis ultrices gravida. Vivamus laoreet risus at erat tristique, laoreet ultricies massa tempus.</p>
+          <h2>About Me</h2>
           <section class="project-item">
-            <img src="https://images.pexels.com/photos/15910023/pexels-photo-15910023/free-photo-of-krajobraz-gory-wakacje-skaly.jpeg?auto=compress&cs=tinysrgb&w=1600" alt="mountain">
+            <img src="https://img.freepik.com/free-vector/organic-flat-design-about-me-concept_23-2148899256.jpg?size=626&ext=jpg&ga=GA1.2.497684488.1685648041&semt=robertav1_2_sidr" alt="image">
             <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h3>
             <p>Morbi eleifend magna ac odio condimentum egestas condimentum id libero. Praesent libero est, laoreet vel risus id, ornare volutpat libero. Suspendisse laoreet, leo sit amet sodales congue, dolor velit ultricies mauris, vitae ullamcorper mauris lorem in lorem. Pellentesque porttitor tellus dui, at tincidunt arcu tristique at. In consequat sed velit nec lobortis. </p>
-            <a class="btn" href="#" target="_blank">Link</a>
+            <a class="btn" href="#" target="_blank">Link</a> <a class="btn" href="#" target="_blank">Link</a>
+             
           </section>  
-<section class="project-item">
-            <img src="https://images.pexels.com/photos/15910160/pexels-photo-15910160/free-photo-of-gory-ludzie-wedrowanie-wedrowcy.jpeg?auto=compress&cs=tinysrgb&w=1600" alt="mountain">
-            <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h3>
-            <p>Morbi eleifend magna ac odio condimentum egestas condimentum id libero. Praesent libero est, laoreet vel risus id, ornare volutpat libero. Suspendisse laoreet, leo sit amet sodales congue, dolor velit ultricies mauris, vitae ullamcorper mauris lorem in lorem. Pellentesque porttitor tellus dui, at tincidunt arcu tristique at. In consequat sed velit nec lobortis. </p>
-            <a class="btn" href="#" target="_blank">Link</a>
-          </section>
-        </div>
 
+       
+</div>
       <footer>
         <div class="content-wrap">
           <h2>Let's Keep in Touch!</h2>
